# disktidy

./: .gitignore  CategorizedFileList使用指南.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
.trae/: ARCHITECTURE.md  PLAN.md  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_cache.rs  app_config.rs  cleaner.rs  driver.rs  file_analyzer.rs  file_classifier.rs  large_file.rs  large_file_scan.rs  mod.rs  scan.rs  settings.rs  software_residue.rs  system.rs
src-tauri/src/models/: cleaner.rs  error.rs  events.rs  file_analyzer.rs  mod.rs  scan.rs  settings.rs  system.rs
src-tauri/src/modules/: cancellable_file_classifier.rs  disk_scan.rs  driver_manager.rs  file_classifier.rs  large_file_scan.rs  large_file_scanner.rs  mod.rs  scanner_framework.rs  system_info.rs
src-tauri/src/modules/app_cache/: scanner.rs
src-tauri/src/modules/cleaner/: executor.rs  mod.rs  recycle_bin.rs  report.rs  safety.rs
src-tauri/src/modules/file_analyzer/: duplicate.rs  garbage.rs  junk_file.rs  junk_file_scan.rs  large_file.rs  mod.rs
src-tauri/src/utils/: app_path_resolver.rs  app_paths_config.rs  file_category.rs  file_type.rs  format.rs  hash.rs  mod.rs  path.rs  scan_cache.rs  wechat_dat_decoder.rs
src-tauri/tests/: integration_tests.rs
src-tauri/tests/fixtures/: mod.rs  test_fixture.rs
src-tauri/tests/integration/: clean_test.rs  duplicate_test.rs  garbage_test.rs  large_file_test.rs  mod.rs  safety_test.rs  settings_test.rs
(+112 files in other folders)
