[package]
name = "disktidy-lib"
version = "1.0.0"
description = "Windows磁盘清理工具"
authors = ["DiskTidy Team"]
edition = "2021"

[lib]
name = "disktidy_lib"
path = "src/lib.rs"

[[bin]]
name = "disktidy"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
sysinfo = "0.33"
thiserror = "1"
sha2 = "0.10"
glob-match = "0.2"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
lazy_static = "1.4"
once_cell = "1"
hostname = "0.4"
chrono = "0.4"
futures = "0.3"
lru = "0.12"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
] }
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
